Issue #1451 - Remove trailing slashes for html meta data

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <base href="%PUBLIC_URL%/" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#33b5e5" />
-    <meta name="html-head" content="replace" />
+    <meta charset="utf-8">
+    <base href="%PUBLIC_URL%/">
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#33b5e5">
+    <meta name="html-head" content="replace">
 
     <!--
       The AKHQ_PREFIX_PATH placeholder magic value is replaced during serving by server
