Further stylesheet and DOM improvements

--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta content="dark" name="color-scheme">
+    <meta content="dark" name="color-scheme" />
     <base href="/" />
     <link rel="icon" href="favicon.ico" />
     <link rel="manifest" href="manifest.json" />
